[package]
name        = "holiday_jp"
version     = "0.1.2"
authors     = ["atsushi130 <atsushi_main@outlook.jp>"]
license     = "MIT/Apache-2.0"
description = "holiday_jp"
readme      = "readme.md"
repository  = "https://github.com/atsushi130/holiday-jp"
keywords    = ["holiday", "date", "jp"]

[dependencies]
chrono = "0.4"
hyper  = "0.10"
hyper-native-tls = "0.2"
rustc-serialize  = "0.3"

[lib]
name = "holiday_jp"
path = "./src/lib.rs"
